--- a/product01 copy.html
+++ b/product01 copy.html
@@ -64,7 +64,7 @@
     </div>
   </nav>
 </header>
-<section>
+<section class="primerbloque">
   <aside class="aside">
     <ul class="tabla_filtro">
       <li><div class="clasificacion_filtro"> Marca</div>
@@ -125,17 +125,17 @@
           <legend>Opciones de Entrega</legend>
           <div id="domicilio">
             <div><img src="" alt="domicilio"></div>
-            <div><h4>DISPONIBLE</h4></div>
+            <div><h5>DISPONIBLE</h5></div>
             <div><P>Despacho a domicilio</P></div>
           </div>
           <div id="retiro">
             <div><img src="" alt="retiro"></div>
-            <div><h4>NO DISPONIBLE</h4></div>
+            <div><h5>NO DISPONIBLE</h5></div>
             <div><P>Retiro en tienda</P></div>
           </div>
           <div id="stock">
             <div><img src="" alt="stock"></div>
-            <div><h4>NO DISPONIBLE</h4></div>
+            <div><h5>NO DISPONIBLE</h5></div>
             <div><P>Stock ene tienda</P></div> 
           </div>
         </div>
@@ -207,9 +207,9 @@
   <div id="nav_ventanas_menu">
     <p data-target="#contenedor_FT">Ficha Técnica</p>
     <p data-target="#contenedor_tec">Descripción</p>
-</div>
-<div class="nav_ventanas">
-    <div data-content id="contenedor_FT" class="active">
+  </div>
+  <div class="nav_ventanas">
+      <div data-content id="contenedor_FT" class="active">
         <h1>Ficha Técnica</h1>
         <br>
         <table id="tablafichat">
@@ -244,9 +244,9 @@
             ajuste de tiempo, sonido, bloqueo para niños, luz del tambor</td>
         </tr>
         </table>
-    </div>
+     </div>
     <br>
-    <div data-content id="contenedor_tec">
+     <div data-content id="contenedor_tec">
         <h1>Descripción</h1>
         <br>
         <div id="contenedor_tec_sup">
@@ -274,8 +274,8 @@
                 para que siempre estén frescas y limpias. Mediante aire caliente, <br>
                 remueve malos olores sin necesidad de agua o productos químicos.</p>
         </div>
-    </div>
-</div>
+      </div>
+  </div>
 </section>
 
 <footer>
