--- a/CarProdu1.html
+++ b/CarProdu1.html
@@ -8,14 +8,20 @@
 </head>
 <body>
   <div>
+    <table>
       <tr>
+        <td>Producto: Modelo= "WT19BSS6H LG">Lavadora 19Kg </p> </td>
+        <td> <Img src="IMAGEN/lavadora4.jpg" width="80px" height="100px">  </td>
+      </tr>
         <h2>Detalles</h2>
-          <p>Producto: <data Modelo= "WT19BSS6H LG">Lavadora 19Kg</data><br> </p>
-  <p>  <Img src="Lavadora-LG"
-  <h2>Detalles</h2>
-    <p>Producto: <data Modelo="WT19BSS6H LG"></data><br> </p>
+    <p>Producto:  Modelo="WT19BSS6H LG" <br> </p>
+  </table>
 </tr>
-  <p></p>
+        <td>Producto: Modelo= "WA17T6260BY SAMSUNG">Lavadora 17kg </p> </td>
+        <td> <img scr="IMAGEN/lavadora1.jpg" width="80px" height="=100px"> </td>
+      </tr>  
+        <h2>Detalles</h2>
+    <p>Producto: Modelo= "WA17T6260BY SAMSUNG" <br> </p>  
   </div>  
 </body>
 </html>
