--- a/product01 copy.html
+++ b/product01 copy.html
@@ -253,6 +253,7 @@
         <h1>Descripción</h1>
         <br>
         <div id="contenedor_tec_sup">
+            <!--cambiarlo por un logo con una direccion url-->
             <button id="contenedor_tec_sup_boton">SAMSUNG</button>
             <a href="https://www.samsung.com/es/tecnologiaconproposito/" id="contenedor_tec_sup_texto">Conoce más...</a>
         </div>
