--- a/product01 copy.html
+++ b/product01 copy.html
@@ -113,7 +113,7 @@
         <h3>Modelo WAt7T6268Y | Código 391362X</h3>
       </div>
       <div>
-       <img src="IMAGEN/Lavadora_17kg.jpg" alt="Lavadora_17kg" width="100px">
+       <img src="IMAGEN/samsung01.webp" alt="Lavadora_17kg" width="100px">
         <figcaption>
         Lavadora 17kg WAt7T626BY
         </figcaption>
