--- a/sección-empresas.html
+++ b/sección-empresas.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="principal.css">
-    <link rel="stylesheet" href="secciones.css">
+    <link rel="stylesheet" href="CSS/principal.css">
+    <link rel="stylesheet" href="CSS/secciones.css">
     <link rel="shortcut icon" href="IMAGEN/logo png.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
         <title>Electro Hogar</title>
 </head>
 <body>
-<header class="dtop1">
+    <header class="dtop1">
     <div class="cabecera1">
         <div class="cabecera-izq">
             <img src="IMAGEN/youtube.png" alt="Youtube" width="20px"> &nbsp;
@@ -41,14 +41,7 @@
           <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
             <ul class="submenu">
             <li><a href="">LG</a></li>
-             <li><a href="">BOSH</a></li>
-              <li><a href="">ELECTROLUZ</a></li>
               <li><a href="">SAMSUNG</a></li>
-              <li><a href="">MABE</a></li>
-              <li><a href="">WINIA</a></li>
-              <li><a href="">PANASONIC</a></li>
-              <li><a href="">MIRAY</a></li>
-              <li><a href="">COLUMBIA</a></li>
             </ul>
           </li>
        </ul>
@@ -58,33 +51,77 @@
         <p style="text-align: center;">0 Productos - S/. 0.0</p>
         </div>
     </nav>
-</header> 
-
-
-    <h3>MARCA</h3>
-
-    <h4>PRECIO</h4>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<footer>
-    <div class="monsa">
-        <address>
-            <div class="info-contacto">
-            GRUPO 1 , ELECTRO-HOGAR S.A. <br>
-            <a href="">electrohogar@electrohogar.com</a><br>
-            Calle Arenas 230 , Villa Humedales - Indonesia <br>
-            +62 66518-9214 
+    </header> 
+    <article class="empresas">
+        <div class="multimedia">
+            <div>
+                <h2>Como usar tus productos</h2>
             </div>
-            <div class="botoncontactanos">
-            <button>CONTACTANOS</button>
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/WkAXmrA24gQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-        </address>
-    </div>
-    <div class="certus">
-        <span class="registro">
-            Todos los derechos reservados ELECTRO-HOGAR S.A. 2019
-        </span>
-    </div>
-</footer> 
+            <div>
+
+            </div>
+        </div>
+        <div class="sugerencia">
+            <div>
+                <h1>Comprobar las funciones y secciones de limpieza en la lavadora de carga frontal</h1>
+                <p><b>Un mantenimiento regular garantiza una operación sin problemas.
+                    Además, puede evitar que tu ropa tenga bacterias y malos olores. 
+                    Lee estas instrucciones para mantener la lavadora mucho más limpia y saludable.</b></p>
+            </div>
+            <div>
+                <h3>Cómo limpiar el filtro de bomba/desechos/drenaje</h3>
+                <p>Consideramos informar que nuestros modelos cuenta con
+                    distintos tipos de filtros uno de ellos ayuda retener
+                     objetos que el usuario pueda omitir retirar.</p>
+                <p>A la vez consideremos que estos mismo objetos pueden llegar a dañar el producto</p>
+                <ul>
+                    <li>La ubicación del filtro de bomba para modelos de Carga Superior se encuentra a 
+                        espaldas de la lavadora, en los modelos de Carga Frontal se encuentra en la parte 
+                        baja de la tapa frontal, el filtro de bomba es una tapa redonda de color negro.</li>
+                    <li>Deberemos de girar la tapa contra las manecillas del reloj para abrirla. Tener en 
+                        cuenta que el producto deberá estar vacío (sin agua / ni ropa).</li>
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    <li>Al destapar el filtro de bomba, limpiarlo con cepillo y abundante agua. 
+                        A la vez limpiar la cavidad, eliminando los residuos/deshechos que se puedan encontrar.</li>
+                        <img src="" alt="">
+                    <li>Culminamos volviendo a colocar el filtro de bomba y ejecutando un proceso rápido de lavado 
+                        para comprobar su correcto funcionamiento. No deberá notar ningún tipo de filtración.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="opiniones">
+            <div>
+
+            </div>
+        </div>
+    </article>
+
+    
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <footer>
+        <div class="monsa">
+            <address>
+                <div class="info-contacto">
+                GRUPO 1 , ELECTRO-HOGAR S.A. <br>
+                <a href="">electrohogar@electrohogar.com</a><br>
+                Calle Arenas 230 , Villa Humedales - Indonesia <br>
+                +62 66518-9214 
+                </div>
+                <div class="botoncontactanos">
+                <button>CONTACTANOS</button>
+                </div>
+            </address>
+        </div>
+        <div class="certus">
+            <span class="registro">
+                Todos los derechos reservados ELECTRO-HOGAR S.A. 2019
+            </span>
+        </div>
+    </footer> 
 </body>
 </html>
