--- a/seccion-lavanderia.html
+++ b/seccion-lavanderia.html
@@ -23,7 +23,7 @@
       <img src="IMAGEN/instagram.png" alt="Instagram" width="20px"> 
     </div>
     <div class="cabecera-centro"> 
-      <p>SABEMOS QUE ENCONTRARÁS LO QUE ESTAS BUSCANDO ;)</p>
+      <p id="cabecera-centro-eslogan">SABEMOS QUE ENCONTRARÁS LO QUE ESTAS BUSCANDO ;)</p>
     </div>
     <form>
       <div class="cabecera-der">   
@@ -65,7 +65,7 @@
 <section id="titulo_lavan">
   <H1>SECCIÓN LAVANDERÍA</H1>
 </section>
-<hr>
+<hr>  
 <section id="aside_lavand">
   <aside>
     <ul class="tabla_filtro">
