Corrección del aside 1.0

--- a/seccion-lavanderia.html
+++ b/seccion-lavanderia.html
@@ -43,14 +43,7 @@
       <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
         <ul class="submenu">
         <li><a href="">LG</a></li>
-        <li><a href="">BOSH</a></li>
-        <li><a href="">ELECTROLUZ</a></li>
-          <li><a href="">SAMSUNG</a></li>
-          <li><a href="">MABE</a></li>
-          <li><a href="">WINIA</a></li>
-          <li><a href="">PANASONIC</a></li>
-          <li><a href="">MIRAY</a></li>
-          <li><a href="">COLUMBIA</a></li>
+        <li><a href="">SAMSUNG</a></li>
         </ul>
       </li>
     </ul>
@@ -71,38 +64,30 @@
     <ul class="tabla_filtro">
       <li><div class="clasificacion_filtro"> Marca</div>
         <ul class="filtro">
+          <li><input type="checkbox" name="filtro" id="filtro-all">
+            <label for="LG">TODO</label></li>
           <li><input type="checkbox" name="filtro" id="LG">
             <label for="LG">LG</label></li>
-            <li><input type="checkbox" name="filtro" id="SAMSUNG">
+          <li><input type="checkbox" name="filtro" id="SAMSUNG">
             <label for="LG">SAMSUNG</label></li>
         </ul>
       </li>
       <li><div class="clasificacion_filtro">Precio</div>
         <ul class="filtro">
           <li><input type="checkbox" name="filtro" id="precio1">
-            <label for="precio1">S/.0.00 - S/.799.99</label></li>
+            <label for="precio1">S/ .1,000.00 - S/.2,000.00</label></li>
           <li><input type="checkbox" name="filtro" id="precio2">
-            <label for="precio2">S/.800.00 - /.999.99</label></li>
+            <label for="precio2">S/ .2,001.00 - S/. 3,000.00</label></li>
           <li><input type="checkbox" name="filtro" id="precio3">
-            <label for="precio3">S/.1,000.00 - S/.1,199.99</label></li>
-          <li><input type="checkbox" name="filtro" id="precio4">
-            <label for="precio4">S/.1,200.00 - S/.1,399.99</label></li>
-          <li><input type="checkbox" name="filtro" id="precio5">
-            <label for="precio5">S/.1,400.00 - S/.1,799.99</label></li>
-          <li><input type="checkbox" name="filtro" id="precio6">
-            <label for="precio6">S/.1,800.00 - 2,199.99</label></li>
-          <li><input type="checkbox" name="filtro" id="precio7">
-            <label for="precio7">S/.2,200.00 - superior</label></li>
+            <label for="precio3">S/ .3,001.00 - S/. 4,000.00</label></li>
         </ul>
       </li>
       <li><div class="clasificacion_filtro" >Color</div>
         <ul class="filtro">
           <li><input type="checkbox" name="filtro" id="color1">
-            <label for="color1">NEGRO</label></li>
+            <label for="color1">CLARO</label></li>
           <li><input type="checkbox" name="filtro" id="color1">
-            <label for="color1">BLANCO</label></li>
-          <li><input type="checkbox" name="filtro" id="color1">
-            <label for="color1">GRIS</label></li>
+            <label for="color1">OSCURO</label></li>
         </ul>
       </li>
     </ul>
