--- a/sección-empresas.html
+++ b/sección-empresas.html
@@ -83,11 +83,11 @@
                         baja de la tapa frontal, el filtro de bomba es una tapa redonda de color negro.</li>
                     <li>Deberemos de girar la tapa contra las manecillas del reloj para abrirla. Tener en 
                         cuenta que el producto deberá estar vacío (sin agua / ni ropa).</li>
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <img src="IMAGEN/samsung2.gif" alt="" width="400px">
+                        <img src="IMAGEN/samsung1.jpg" alt="" width="310px">
                     <li>Al destapar el filtro de bomba, limpiarlo con cepillo y abundante agua. 
                         A la vez limpiar la cavidad, eliminando los residuos/deshechos que se puedan encontrar.</li>
-                        <img src="" alt="">
+                        <img src="IMAGEN/samsung3.gif" alt="" width="400px">
                     <li>Culminamos volviendo a colocar el filtro de bomba y ejecutando un proceso rápido de lavado 
                         para comprobar su correcto funcionamiento. No deberá notar ningún tipo de filtración.</li>
                 </ul>
@@ -95,6 +95,9 @@
         </div>
         <div class="opiniones">
             <div>
+                <form action="">
+                    
+                </form>
 
             </div>
         </div>
