--- a/sección-empresas.html
+++ b/sección-empresas.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/principal.css">
-    <link rel="stylesheet" href="CSS/secciones.css">
+    <!--<link rel="stylesheet" href="CSS/secciones.css">-->
+    <link rel="stylesheet" href="CSS/dis_empresas.css">
     <link rel="shortcut icon" href="IMAGEN/logo png.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
         <title>Electro Hogar</title>
@@ -58,7 +59,7 @@
                 <h2>Como usar tus productos</h2>
             </div>
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WkAXmrA24gQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/WkAXmrA24gQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
 
@@ -94,18 +95,16 @@
             </div>
         </div>
         <div class="opiniones">
-            <div>
-                <form action="">
-                    
-                </form>
-
-            </div>
+            <h2>Cuentanos tu experiencia con nuestros productos:</h2>
+            <form action="">
+                <label for="fname">Nombre:</label><br>
+                <input type="text" id="fname" name="fname"><br>
+                <label for="message">Comentario:</label><br>
+                <textarea name="message" id="message" >Ingresa tu comentario.</textarea>
+            </form>
         </div>
     </article>
 
-    
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer>
         <div class="monsa">
             <address>
