--- a/product04.html
+++ b/product04.html
@@ -8,12 +8,10 @@
 
     <link rel="stylesheet" href="../CSS/principal.css">
     <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
-    
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
-    <!--<link rel="stylesheet" href="CSS/product01.css">-->
+    <link rel="stylesheet" href="/CSS/product04.css">
 
     <script src="JS/product01.js" defer></script>
-    <link rel="stylesheet" href="../CSS/productos.css">
 </head>
 <body>
 <header class="dtop1">
@@ -42,7 +40,7 @@
     </div>
     <ul id="" class="menu">
       <li><a href="index.html"><b>HOME</b></a></li> |
-      <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
+      <li><a href="seccion-lavanderia.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
       <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
         <ul class="submenu">
           <li><a href="">LG</a></li>
@@ -65,58 +63,18 @@
   </nav>
 </header>
 <section class="primerbloque">
-  <aside class="aside">
-    <ul class="tabla_filtro">
-      <li><div class="clasificacion_filtro"> Marca</div>
-        <ul class="filtro">
-          <li><input type="checkbox" name="filtro" id="LG">
-            <label for="LG">LG</label></li>
-            <li><input type="checkbox" name="filtro" id="SAMSUNG">
-            <label for="LG">SAMSUNG</label></li>
-        </ul>
-      </li>
-      <li><div class="clasificacion_filtro">Precio</div>
-        <ul class="filtro">
-          <li><input type="checkbox" name="filtro" id="precio1">
-            <label for="precio1">S/.0.00-S/.799.99</label></li>
-          <li><input type="checkbox" name="filtro" id="precio2">
-            <label for="precio2">S/.800.00-S/.999.99</label></li>
-          <li><input type="checkbox" name="filtro" id="precio3">
-            <label for="precio3">S/.1,000.00-S/.1,199.99</label></li>
-          <li><input type="checkbox" name="filtro" id="precio4">
-            <label for="precio4">S/.1,200.00-S/.1,399.99</label></li>
-          <li><input type="checkbox" name="filtro" id="precio5">
-            <label for="precio5">S/.1,400.00-S/.1,799.99</label></li>
-          <li><input type="checkbox" name="filtro" id="precio6">
-            <label for="precio6">S/.1,800.00-2,199.99</label></li>
-          <li><input type="checkbox" name="filtro" id="precio7">
-            <label for="precio7">S/.2,200.00-superior</label></li>
-        </ul>
-      </li>
-      <li><div class="clasificacion_filtro" >Color</div>
-        <ul class="filtro">
-          <li><input type="checkbox" name="filtro" id="color1">
-            <label for="color1">NEGRO</label></li>
-          <li><input type="checkbox" name="filtro" id="color1">
-            <label for="color1">BLANCO</label></li>
-          <li><input type="checkbox" name="filtro" id="color1">
-            <label for="color1">GRIS</label></li>
-        </ul>
-      </li>
-    </ul>
-  </aside>
   <article class="produtoanddescription">
-    <div>
+    <div class="produtoanddescription__img-info">
+      <div>
+        <img src="IMAGEN/lavadora4.jpg" alt="Lavadora_17kg" width="750px">
+        <figcaption>
+          <p>Lavadora 17kg WAt7T626BY</p>
+        </figcaption>
+      </div>
       <div>
         <h1>Samsung</h1>
         <h3>Lavadora 17kg WAt7T626BY</h3>
         <h3>Modelo WAt7T6268Y | Código 391362X</h3>
-      </div>
-      <div>
-       <img src="IMAGEN/samsung01.webp" alt="Lavadora_17kg" width="100px">
-        <figcaption>
-        Lavadora 17kg WAt7T626BY
-        </figcaption>
       </div>
     </div>
     <div id="tabladecap">
@@ -136,7 +94,7 @@
           <div id="stock">
             <div><img src="" alt="stock"></div>
             <div><h5>NO DISPONIBLE</h5></div>
-            <div><P>Stock ene tienda</P></div> 
+            <div><P>Stock en tienda</P></div> 
           </div>
         </div>
       </div>
