--- a/sección-empresas.html
+++ b/sección-empresas.html
@@ -53,6 +53,8 @@
         </div>
     </nav>
     </header> 
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v11.0" nonce="JRki7fNq"></script>
     <article class="empresas">
         <div class="multimedia">
             <div>
@@ -96,12 +98,8 @@
         </div>
         <div class="opiniones">
             <h2>Cuentanos tu experiencia con nuestros productos:</h2>
-            <form action="">
-                <label for="fname">Nombre:</label><br>
-                <input type="text" id="fname" name="fname"><br>
-                <label for="message">Comentario:</label><br>
-                <textarea name="message" id="message" >Ingresa tu comentario.</textarea>
-            </form>
+            <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-width="60%" data-numposts="2"></div>
+            
         </div>
     </article>
 
