produc4+css - primera obs

--- a/product04.html
+++ b/product04.html
@@ -65,44 +65,48 @@
 <section class="primerbloque">
   <article class="produtoanddescription">
     <div class="produtoanddescription__img-info">
-      <div>
+      <div class="produtoanddescription__img-info__img">
         <img src="IMAGEN/lavadora4.jpg" alt="Lavadora_17kg" width="600px">
         <figcaption>
-          <p>Lavadora 17kg WAt7T626BY</p>
+          <p>LG WT19BSS6H</p>
         </figcaption>
       </div>
-      <div>
-        <h1>Samsung</h1>
-        <h3>Lavadora 17kg WAt7T626BY</h3>
-        <h3>Modelo WAt7T6268Y | Código 391362X</h3>
+      <div class="produtoanddescription__img-info__info">
+        <div class="produtoanddescription__img-info__info__caracteristicas">
+        <h1>WT19BSS6H</h1>
+        <h3>Lavadora de 19 kg carga superior TurboWash 3D</h3>
+        <h3>6MotionDD, Steam y conectividad Wi-Fi</h3>
       </div>
-    </div>
-    <div id="tabladecap">
-      <div id="tb_cap"  >
-        <div>
-          <legend>Opciones de Entrega</legend>
-          <div id="domicilio">
-            <div><img src="" alt="domicilio"></div>
-            <div><h5>DISPONIBLE</h5></div>
-            <div><P>Despacho a domicilio</P></div>
+      <div class="produtoanddescription__img-info__info__entrega">
+        <div id="tabladecap">
+          <div id="tb_cap"  >
+            <div>
+              <legend>Opciones de Entrega</legend>
+              <div id="domicilio">
+                <div><img src="" alt="domicilio"></div>
+                <div><h5>DISPONIBLE</h5></div>
+                <div><P>Despacho a domicilio</P></div>
+              </div>
+              <div id="retiro">
+                <div><img src="" alt="retiro"></div>
+                <div><h5>NO DISPONIBLE</h5></div>
+                <div><P>Retiro en tienda</P></div>
+              </div>
+              <div id="stock">
+                <div><img src="" alt="stock"></div>
+                <div><h5>NO DISPONIBLE</h5></div>
+                <div><P>Stock en tienda</P></div> 
+              </div>
+            </div>
           </div>
-          <div id="retiro">
-            <div><img src="" alt="retiro"></div>
-            <div><h5>NO DISPONIBLE</h5></div>
-            <div><P>Retiro en tienda</P></div>
-          </div>
-          <div id="stock">
-            <div><img src="" alt="stock"></div>
-            <div><h5>NO DISPONIBLE</h5></div>
-            <div><P>Stock en tienda</P></div> 
+          <div id="tr_cond">
+            <p><a href="#">Cambios y Condiciones</a> en nuestras tiendas a nivel nacional</p>
           </div>
         </div>
       </div>
-      <div id="tr_cond">
-        <p><a href="#">Cambios y Condiciones</a> en nuestras tiendas a nivel nacional</p>
-      </div>
-      
     </div>
+  </div>
+
  </article>
 </section>
     
