--- a/product01.html
+++ b/product01.html
@@ -42,18 +42,11 @@
     </div>
     <ul id="" class="menu">
       <li><a href="index.html"><b>HOME</b></a></li> |
-      <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
+      <li><a href="seccion-lavanderia.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
       <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
         <ul class="submenu">
-          <li><a href="">LG</a></li>
-          <li><a href="">BOSH</a></li>
-          <li><a href="">ELECTROLUZ</a></li>
-          <li><a href="">SAMSUNG</a></li>
-          <li><a href="">MABE</a></li>
-          <li><a href="">WINIA</a></li>
-          <li><a href="">PANASONIC</a></li>
-          <li><a href="">MIRAY</a></li>
-          <li><a href="">COLUMBIA</a></li>
+          <li><a href="/sección-empresas.html">LG</a></li>
+          <li><a href="/sección-empresas.html">SAMSUNG</a></li>
         </ul>
       </li>
     </ul>
