Plantillas 1.2 las imagenes ya están cambiadas solo falta cambiar la información

--- a/index.html
+++ b/index.html
@@ -40,15 +40,8 @@
           <li><a href="seccion-lavanderia.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
           <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
             <ul class="submenu">
-            <li><a href="">LG</a></li>
-             <li><a href="">BOSH</a></li>
-              <li><a href="">ELECTROLUZ</a></li>
-              <li><a href="">SAMSUNG</a></li>
-              <li><a href="">MABE</a></li>
-              <li><a href="">WINIA</a></li>
-              <li><a href="">PANASONIC</a></li>
-              <li><a href="">MIRAY</a></li>
-              <li><a href="">COLUMBIA</a></li>
+            <li><a href="/sección-empresas.html">LG</a></li>
+             <li><a href="/sección-empresas.html">BSAMSUNG</a></li>
             </ul>
           </li>
        </ul>
@@ -115,8 +108,8 @@
     </div>
     <div class="bar4x4_4">
         <div class="favimg4">
-            <img src="IMAGEN/lavadora4.jpg" 
-            alt="lav4" height="150px" width="150px">
+            <a href="/product04.html"><img src="IMAGEN/lavadora4.jpg" 
+            alt="lav4" height="150px" width="150px"></a>
             </div>
             <div class="textin4">
                 <p>Lavadora <br>TurboWash 3D
