--- a/product02.html
+++ b/product02.html
@@ -59,7 +59,7 @@
   <article class="produtoanddescription">
     <div class="produtoanddescription__img-info">
       <div class="produtoanddescription__img-info__img">
-        <img src="IMAGEN/lavadora4.jpg" alt="Lavadora_17kg" width="600px">
+        <img src="IMAGEN/lavadora2.jpg" alt="Lavadora_17kg" width="600px">
         <figcaption>
           <p>LG WT19BSS6H</p>
         </figcaption>
@@ -117,8 +117,8 @@
   <div class="grid">
       <div class="bar4x4_1">
           <div class="favimg2">
-              <img src="IMAGEN/lavadora2.jpg" 
-              alt="lav1" height="150px" width="150px">
+              <a href="/product02.html"><img src="IMAGEN/lavadora2.jpg" 
+              alt="lav1" height="150px" width="150px"></a>
           </div>
           <div class="textin1">
               <p>Lavaseca<br>AddWash™</p>
@@ -127,8 +127,8 @@
       </div>
       <div class="bar4x4_2">
           <div class="favimg4">
-              <img src="IMAGEN/lavadora4.jpg" 
-              alt="lav2" height="150px" width="150px">
+              <a href="/product04.html"><img src="IMAGEN/lavadora4.jpg" 
+              alt="lav2" height="150px" width="150px"></a>
           </div>
           <div class="textin2">
               <p>Lavadora <br>TurboWash 3D</p>
@@ -137,8 +137,8 @@
       </div>
       <div class="bar4x4_3">
           <div class="favimg1">
-              <img src="IMAGEN/lavadora1.jpg" 
-              alt="lav3" height="150px" width="150px">
+              <a href="/product01.html"><img src="IMAGEN/lavadora1.jpg" 
+              alt="lav3" height="150px" width="150px"></a>
           </div>   
           <div class="textin3">
               <p>Secadora<br>SensorDry 9kg</p>
@@ -147,8 +147,8 @@
       </div>
       <div class="bar4x4_4">
           <div class="favimg3">
-              <img src="IMAGEN/lavadora3.jpg" 
-              alt="lav4" height="150px" width="150px">
+              <a href="/product03.html"><img src="IMAGEN/lavadora3.jpg" 
+              alt="lav4" height="150px" width="150px"></a>
               </div>
               <div class="textin4">
                   <p>Lavadora<br>Fondo especial</p>
