--- a/product04.html
+++ b/product04.html
@@ -69,6 +69,7 @@
         <h1>WT19BSS6H</h1>
         <h3>Lavadora de 19 kg carga superior TurboWash 3D</h3>
         <h3>6MotionDD, Steam y conectividad Wi-Fi</h3>
+        <h2>S/. 1,999</h2>
       </div>
       <div class="produtoanddescription__img-info__info__entrega">
         <div id="tabladecap">
@@ -117,8 +118,8 @@
   <div class="grid">
       <div class="bar4x4_1">
           <div class="favimg2">
-              <img src="IMAGEN/lavadora2.jpg" 
-              alt="lav1" height="150px" width="150px">
+              <a href="/product02.html"><img src="IMAGEN/lavadora2.jpg" 
+              alt="lav1" height="150px" width="150px"></a>
           </div>
           <div class="textin1">
               <p>Lavaseca<br>AddWash™</p>
@@ -127,8 +128,8 @@
       </div>
       <div class="bar4x4_2">
           <div class="favimg4">
-              <img src="IMAGEN/lavadora4.jpg" 
-              alt="lav2" height="150px" width="150px">
+              <a href="/product04.html"><img src="IMAGEN/lavadora4.jpg" 
+              alt="lav2" height="150px" width="150px"></a>
           </div>
           <div class="textin2">
               <p>Lavadora <br>TurboWash 3D</p>
@@ -137,8 +138,8 @@
       </div>
       <div class="bar4x4_3">
           <div class="favimg1">
-              <img src="IMAGEN/lavadora1.jpg" 
-              alt="lav3" height="150px" width="150px">
+              <a href="/product01.html"><img src="IMAGEN/lavadora1.jpg" 
+              alt="lav3" height="150px" width="150px"></a>
           </div>   
           <div class="textin3">
               <p>Secadora<br>SensorDry 9kg</p>
@@ -147,8 +148,8 @@
       </div>
       <div class="bar4x4_4">
           <div class="favimg3">
-              <img src="IMAGEN/lavadora3.jpg" 
-              alt="lav4" height="150px" width="150px">
+              <a href="/product03.html"><img src="IMAGEN/lavadora3.jpg" 
+              alt="lav4" height="150px" width="150px"></a>
               </div>
               <div class="textin4">
                   <p>Lavadora<br>Fondo especial</p>
