--- a/seccion-lavanderia.html
+++ b/seccion-lavanderia.html
@@ -101,7 +101,7 @@
     <div id="aside_lavand_prodc_smsng">
       <div class="prodc-smsng">
         <div class="main-lavan-prodc-img">
-          <a href="/product01.html"></a><img src="IMAGEN/lavadora1.jpg" alt="lavadora LG" height="250px" width="250px">
+          <a href="/product01.html"><img src="IMAGEN/lavadora1.jpg" alt="lavadora LG" height="250px" width="250px"></a>
         </div>
         <section class="seccion">
           <h1>SAMSUNG</h1>
