--- a/product01.html
+++ b/product01.html
@@ -11,7 +11,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
     <!--<link rel="stylesheet" href="CSS/product01.css">-->
-
+    <link rel="shortcut icon" href="IMAGEN/logo png.png"/>
     <script src="JS/product01.js" defer></script>
     <link rel="stylesheet" href="../CSS/productos.css">
 </head>
@@ -46,14 +46,7 @@
       <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
         <ul class="submenu">
           <li><a href="">LG</a></li>
-          <li><a href="">BOSH</a></li>
-          <li><a href="">ELECTROLUZ</a></li>
           <li><a href="">SAMSUNG</a></li>
-          <li><a href="">MABE</a></li>
-          <li><a href="">WINIA</a></li>
-          <li><a href="">PANASONIC</a></li>
-          <li><a href="">MIRAY</a></li>
-          <li><a href="">COLUMBIA</a></li>
         </ul>
       </li>
     </ul>
