sección-lavandería.html correción en href

--- a/product04.html
+++ b/product04.html
@@ -40,7 +40,7 @@
     </div>
     <ul id="" class="menu">
       <li><a href="index.html"><b>HOME</b></a></li> |
-      <li><a href="seccion-lavanderia.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
+      <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
       <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
         <ul class="submenu">
           <li><a href="">LG</a></li>
